Added icons. Added note field. Added folder.

--- a/src/GameHook.WebAPI/wwwroot/site.css
+++ b/src/GameHook.WebAPI/wwwroot/site.css
@@ -185,11 +185,9 @@ body {
 
 /* Buttons */
 .cmd-button {
-    display: inline;
-    width: 16px;
+    display: inline-block;
+    width: 32px;
     height: 16px;
-    padding-left: 8px;
-    padding-right: 8px;
 }
 
 /* Utility */
