--- a/src/GameHook.WPF/MainWindow.xaml
+++ b/src/GameHook.WPF/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d" WindowStyle="None" AllowsTransparency="True"
         StateChanged="Window_StateChanged" Closing="Window_Closing"
         Foreground="White" Background="#232323"
-        Title="GameHook" MinWidth="384" MinHeight="648">
+        Title="GameHook" MinWidth="384" MinHeight="432">
     <!--#region-->
     <Window.Triggers>
         <EventTrigger RoutedEvent="Loaded">
@@ -111,24 +111,48 @@
                             </StackPanel>
                             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Stretch" Orientation="Horizontal">
                                 <Button Name="WindowControlButton_Pin" Style="{StaticResource WindowBorderControlButtonStyle}" Click="WindowControlButton_Pin_Click" WindowChrome.IsHitTestVisibleInChrome="True">
-                                    <Path StrokeThickness="1" Width="46" Height="32" Stroke="{Binding ElementName=WindowControlButton_Pin, Path=Foreground}" RenderOptions.EdgeMode="Aliased"
-			                      Data="M 18.5,12.5 H 25.5 V 19.5 H 18.5 Z M 20.5,12.5 V 10.5"/>
+                                    <Canvas Width="46" Height="32">
+                                        <Canvas.RenderTransform>
+                                            <TranslateTransform X="12" Y="4"/>
+                                        </Canvas.RenderTransform>
+                                        <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StrokeThickness="1.81103" Stroke="#FFE0E0E0" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                                            <Path.Data>
+                                                <PathGeometry Figures="M 15.562951 2.8598447 10.40634 7.3828156 5.2497291 9.0789299 3.316 10.775044 l 9.02407 7.915199 1.933729 -1.696114 1.933728 -4.522972 5.156612 -4.5229699" FillRule="NonZero"/>
+                                            </Path.Data>
+                                        </Path>
+                                        <Line xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" X1="7.8280344" Y1="14.732643" X2="2.0268474" Y2="19.820986" StrokeThickness="1.81103" Stroke="#FFE0E0E0" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                        <Line xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" X1="14.918375" Y1="2.2944734" X2="22.008717" Y2="8.5135584" StrokeThickness="1.81103" Stroke="#FFE0E0E0" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                    </Canvas>
+                                </Button>
+                                <Button Name="WindowControlButton_Unpin" Visibility="Collapsed" Style="{StaticResource WindowBorderControlButtonStyle}" Click="WindowControlButton_Pin_Click" WindowChrome.IsHitTestVisibleInChrome="True">
+                                    <Canvas Width="46" Height="32">
+                                        <Canvas.RenderTransform>
+                                            <TranslateTransform X="12" Y="4"/>
+                                        </Canvas.RenderTransform>
+                                        <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StrokeThickness="1.81103" Stroke="#FFE0E0E0" Fill="#FFE0E0E0" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+                                            <Path.Data>
+                                                <PathGeometry Figures="M 15.562951 2.8598447 10.40634 7.3828156 5.2497291 9.0789299 3.316 10.775044 l 9.02407 7.915199 1.933729 -1.696114 1.933728 -4.522972 5.156612 -4.5229699" FillRule="Nonzero" />
+                                            </Path.Data>
+                                        </Path>
+                                        <Line xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" X1="7.8280344" Y1="14.732643" X2="2.0268474" Y2="19.820986" StrokeThickness="1.81103" Stroke="#FFE0E0E0" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                        <Line xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" X1="14.918375" Y1="2.2944734" X2="22.008717" Y2="8.5135584" StrokeThickness="1.81103" Stroke="#FFE0E0E0" StrokeLineJoin="Round" StrokeStartLineCap="Round" StrokeEndLineCap="Round"/>
+                                    </Canvas>
                                 </Button>
                                 <Button Name="WindowControlButton_Minimize" Style="{StaticResource WindowBorderControlButtonStyle}" Click="WindowControlButton_Minimize_Click" WindowChrome.IsHitTestVisibleInChrome="True">
                                     <Path StrokeThickness="1" Width="46" Height="32" Stroke="{Binding ElementName=WindowControlButton_Minimize, Path=Foreground}" RenderOptions.EdgeMode="Aliased"
-			                      Data="M 18,15 H 28"/>
+			                            Data="M 18,15 H 28"/>
                                 </Button>
                                 <Button Name="WindowControlButton_Maximize" Visibility="Visible" Style="{StaticResource WindowBorderControlButtonStyle}" Click="WindowControlButton_Maximize_Click" WindowChrome.IsHitTestVisibleInChrome="True">
                                     <Path StrokeThickness="1" Width="46" Height="32" Stroke="{Binding ElementName=WindowControlButton_Maximize, Path=Foreground}" RenderOptions.EdgeMode="Aliased"
-			                      Data="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z"/>
+			                            Data="M 18.5,10.5 H 27.5 V 19.5 H 18.5 Z"/>
                                 </Button>
                                 <Button Name="WindowControlButton_MaximizeRestore" Visibility="Collapsed" Style="{StaticResource WindowBorderControlButtonStyle}" Click="WindowControlButton_Maximize_Click" WindowChrome.IsHitTestVisibleInChrome="True">
                                     <Path StrokeThickness="1" Width="46" Height="32" Stroke="{Binding ElementName=WindowControlButton_MaximizeRestore, Path=Foreground}" RenderOptions.EdgeMode="Aliased"
-			                      Data="M 18.5,12.5 H 25.5 V 19.5 H 18.5 Z M 20.5,12.5 V 10.5 H 27.5 V 17.5 H 25.5"/>
+			                            Data="M 18.5,12.5 H 25.5 V 19.5 H 18.5 Z M 20.5,12.5 V 10.5 H 27.5 V 17.5 H 25.5"/>
                                 </Button>
                                 <Button Name="WindowControlButton_Close" Style="{StaticResource WindowBorderControlButtonCloseStyle}" Click="WindowControlButton_Close_Click" WindowChrome.IsHitTestVisibleInChrome="True">
                                     <Path StrokeThickness="1" Width="46" Height="32" Stroke="{Binding ElementName=WindowControlButton_Close, Path=Foreground}" RenderOptions.EdgeMode="Unspecified"
-			                      Data="M 18,11 27,20 M 18,20 27,11" />
+			                            Data="M 18,11 27,20 M 18,20 27,11" />
                                 </Button>
                             </StackPanel>
                         </Grid>
