Features/nds bizhawk (#55)
* Added experimental NDS, BizHawkDriver and String2.

* Updated memory map driver.

* WIP updates

* Updated .gitignore.

Ready for pre-release alpha testing.

--- a/src/GameHook.WebAPI/wwwroot/site.css
+++ b/src/GameHook.WebAPI/wwwroot/site.css
@@ -90,7 +90,7 @@ body {
 }
 
     #header .header-menu-item {
-        width: 64px;
+        padding-right: 48px;
     }
 
         #header .header-menu-item:hover {
